--- a/bmi/DESCRIPTION
+++ b/bmi/DESCRIPTION
@@ -1,6 +1,6 @@
 Title: Body Mass Index Classification in Adults
-Author: Crazy Farang
-AuthorUrl: https://crazyfarang.shinyapps.io/BMIApp/
+Author: haridas
+AuthorUrl: https://haridas.shinyapps.io/App1/
 License: GPL-3
 DisplayMode: Showcase
 Tags: BMI
